--- a/mandy/src/index.css
+++ b/mandy/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.content {
+  display: none;
+}
+.content.active {
+  display: block;
+}
